
	mime-widget-text: Actually pop up the context menu when
	right-clicking on an URL.

	* src/balsa-mime-widget-text.c (text_view_url_popup):

2020-06-16  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main: Sandbox all the webkit

	https://gitlab.gnome.org/GNOME/Initiatives/-/wikis/Sandbox-all-the-WebKit!

	* src/main.c (balsa_startup_cb):

2020-06-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Use a BALSA_USE_POPOVER=0 environment variable to switch from
	GtkPopover back to GtkMenu.

	This completes the adaptation to BALSA_USE_POPOVER, but with all
	the changes in-place. Still TODO is pulling it all into libbalsa
	with wrappers.

	But...the GtkMenu versions don't actually work!! All actions are
	insensitive. So this may well all finish up being worthless.

	* src/balsa-mime-widget-image.c (balsa_image_button_press_cb):
	* src/balsa-mime-widget-text.c (bmwt_html_open_with_change_state),
	(bmwt_html_popup_context_menu):
	* src/mailbox-node.c (create_context_menu):
	* src/pref-manager.c (add_button_to_box), (add_menu_cb),
	(pm_grid_add_remote_mailbox_servers_group),
	(pm_grid_add_address_books_group):
	* src/sendmsg-window.c (change_attach_mode),
	(attachment_menu_vfs_cb), (add_attachment),
	(add_urlref_attachment), (attachment_button_press_cb),
	(attachment_popup_cb):
	* src/toolbar-factory.c (tm_set_style_changed),
	(tm_popup_context_menu_cb):

2020-06-13  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Various: Use GtkTreeView's "row-activated" signal instead of
	connecting to "button-press-event".

	* libbalsa/autocrypt.c (autocrypt_db_dialog_run),
	(row_activated_cb):
	* libbalsa/libbalsa-gpgme-cb.c (row_activated_cb),
	(lb_gpgme_select_key):

	Use a BALSA_USE_POPOVER=0 environment variable to switch from
	GtkPopover back to GtkMenu.

	* libbalsa/libbalsa.c (libbalsa_use_popover):
	* libbalsa/libbalsa.h:
	* src/balsa-index.c (move_to_change_state),
	(bndx_popup_menu_create), (bndx_do_popup):
	* src/balsa-mblist.c (bmbl_do_popup):